# kakeibo-rs

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: coverage.yml
docker/kakeibo-rs-lambda/: Dockerfile
docker/lambda/: Dockerfile
docs/: memo.md
kakeibo-rs/: Cargo.toml
kakeibo-rs-lambda/: Cargo.toml
kakeibo-rs-lambda/src/: main.rs
kakeibo-rs/src/: handler.rs  ifttt.rs  lib.rs  main.rs  slack.rs
lambda/: Cargo.toml
lambda/src/: main.rs
src/: ifttt.rs  lib.rs  main.rs  slack.rs
