[package]
name = "kakeibo-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
chrono = "0.4"
dotenvy = "0.15.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
